0.3.5.25
  - (zathor) [MKVMuxer] changed log output language to English

0.3.5.24
  - (zathor) removed "AviSynth is not installed" message if the avisynth.dll does not have a version number 

0.3.5.23
  - (zathor) [Log] added the avisynth build date
  - (zathor) [Update Window] added the patent notice to the offline installation and removed an unnecessary avisynth check

0.3.5.22
  - (zathor) added MeGUI icon to some tools (part #2) and adjusted the font of several windows. Feature request #3090902
  - (zathor) [File Indexer] the demuxed audio tracks will replace all existing audio track tabs in the main input tab if "on completion load files" is selected

0.3.5.21
  - (zathor) [AudioEncodingWindow] some cosmetics
  - (zathor) [Muxer] fixed duplicate jobs after editing a mux job
  - (zathor) [Muxer] tweaked the automatically adding of empty tracks

0.3.5.20
  - (zathor) [FileIndexer] + [Muxer] dialogues are not modal anymore; some cosmetics
  - (zathor) [Muxer] removed cancel button; added reset button to the video section; selecting an audio or subtitle file will automatically add a new emtpy track tab (saving two clicks)
  - (zathor) [Muxer] added option to queue several jobs without closing the mux window. Feature request #2038358
  - (zathor) [AVS Cutter] fixed increasing window height if using the "reload video" button
  - (zathor) added MeGUI icon to several tools

0.3.5.19
  - (kurtnoise) Update several Article Name from help button. Patch by XhmikosR (#3079390)
  - (kurtnoise) Update ContextHelp.xml file. Patch by XhmikosR (#3079390)
  - (kurtnoise) Remove log files shortcut from nsis scripts. Patch by XhmikosR (#3079390)
  - (kurtnoise) Remove "tools" sub directory from backupfiles_CheckedChanged() because we can have some backup files in the root folder and SearchOption.AllDirectories is used anyways.
  - (zathor) [Adaptive Muxer] resized window so that the buttons at the bottom are visible again. Bug #3090155